--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -30,6 +30,17 @@ h1 {
     padding: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-align: left;
+    position: relative;
+}
+
+.content-box-poets {
+    background: #FAF9F7;
+    border-radius: 5px;
+    max-width: 50%;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-align: center;
 }
 
 .logo {
@@ -63,4 +74,22 @@ input {
     font-weight: 600;
     line-height: 1.4;
     margin: 10px 0px;
+}
+
+.welcome-message {
+    text-align: left;
+}
+
+.heart-poem-like {
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+}
+
+.title-line {
+    padding: 10px 0px;
+    border-bottom: 1px solid #303030;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
